--- a/src/containers/Footer.css
+++ b/src/containers/Footer.css
@@ -1,9 +1,44 @@
 .footer {
-    height: 10vh;
+    height: 7vh;
     background: rgba(252, 58, 50, 1); 
-    justify-content: center;
 }
 
+.privacy {
+    height: 100%;
+    justify-content: center;
+}
+.privacy a {
+    margin: auto auto auto 10%;
+    color: white;
+    cursor: pointer;
+    font-size: 1.7rem;
+    font-weight: 600;
+}
+
+.social {
+    justify-content: center;
+    height: 100%;
+}
+.social a {
+    margin-left: 1%;
+    margin-right: 1%;
+    height: 30px;
+    width: 30px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.social svg {
+    height: 100%;
+    width: 100% !important;
+}
+.skyscanner {
+    height: 100%;
+    justify-content: flex-end;
+}
+
+.skyscanner a {
+    margin: auto 10% auto auto;
+}
 @media(max-height: 380px) and (orientation: landscape) {
     .footer {
         height: 15vh;
