--- a/src/containers/Footer.css
+++ b/src/containers/Footer.css
@@ -1,12 +1,13 @@
 .footer {
     height: 7vh;
-    background: rgba(252, 58, 50, 1); 
+    background: rgba(252, 58, 50, 1);
 }
 
 .privacy {
     height: 100%;
     justify-content: center;
 }
+
 .privacy a {
     margin: auto auto auto 10%;
     color: white;
@@ -19,6 +20,7 @@
     justify-content: center;
     height: 100%;
 }
+
 .social a {
     margin-left: 1%;
     margin-right: 1%;
@@ -27,10 +29,12 @@
     margin-top: auto;
     margin-bottom: auto;
 }
+
 .social svg {
     height: 100%;
     width: 100% !important;
 }
+
 .skyscanner {
     height: 100%;
     justify-content: flex-end;
@@ -39,8 +43,30 @@
 .skyscanner a {
     margin: auto 10% auto auto;
 }
+
+#skyscanner-img {
+    background-image: url('../images/skyscanner_inline.png');
+    width: 90%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 50%;
+    background-position: right;
+    margin: auto;
+}
+
 @media(max-height: 380px) and (orientation: landscape) {
     .footer {
         height: 15vh;
+    }
+}
+
+@media(max-width: 650px) and (orientation: portrait) {
+    #skyscanner-img {
+        background-image: url('../images/skyscanner_stacked.png');
+        height: 70%;
+    }
+
+    .privacy a {
+        font-size: 1.2rem
     }
 }
