--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -31,7 +31,7 @@
   width: 100%;
   margin-top: auto;
   margin-bottom: auto;
-  height: 65%;
+  padding-bottom: 13%;
 }
 
 .css-yk16xz-control {
@@ -51,7 +51,6 @@
   font-size: 1rem;
   position: relative;
   width: 100%;
-  margin: 1em auto;
   text-align: left;
 }
 
