--- a/src/containers/BridgesList.css
+++ b/src/containers/BridgesList.css
@@ -8,3 +8,12 @@
     width: 7rem !important;
     height: 7rem !important;
 }
+
+.accordion-button:not(.collapsed) {
+    color: white !important;
+    background-color: #f8782582 !important;
+}
+
+h2 {
+    font-size: 15px !important;
+}
