--- a/src/containers/Info.css
+++ b/src/containers/Info.css
@@ -299,15 +299,15 @@ h4.info-flights {
 }
 
 button.login {
-    color: #3D3D3D !important;
-    font-size: 20px !important;
-    line-height: 24px !important;
+    color: white !important;
+    font-size: 13px !important;
+    line-height: 15px !important;
 }
 
 button.signup {
-    color: #3D3D3D !important;
-    font-size: 20px !important;
-    line-height: 24px !important;
+    color: white !important;
+    font-size: 13px !important;
+    line-height: 15px !important;
 }
 
 .SnackbarItem-message-25 {
